--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,35 @@
 	margin-bottom: 2rem;
 }
 
-form{
-	width: 33dvh;
+form {
+    width: 33dvh;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+form > div {
+	display: flex;
+	justify-content: space-between;
+}
+
+form > span{
+	background: rgba(255, 0, 0, 0.199);
+	padding: .5rem;
+	border-radius: .5rem;
+	color: #ff3f3f;
+}
+
+.hidden {
+	display: none;
+	visibility: hidden;
+}
+.show {
+	display: block;
+	visibility: visible;
+}
+
+.usersList{
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
